# rubi_kernel

./: .clang-format  .gitignore  .lldbinit  Build.md  CMakeLists.txt  CmakeLists.txt  CodeStyle.md  Makefile  README.md  a.tmp  bch-gdb.txt  bch.txt  build.sh  f.py  gcc.toolchain.cmake  gdb.init  serial.txt  toolchain.cmake
.github/workflows/: formatter.yml  main.yml
dlang/: CMakeDInformation.cmake  CMakeTestDCompiler.cmake
grub/: grub.cfg  menu.lst
initrd_base/test_dir1/: test.txt  test2.txt
initrd_base/test_dir1/test_dir2/: a.txt  b.txt
kernel/: kernel.c  vga.c
kernel/include/: types.h
kernel/include/kernel/: asm_lib.h  defines.h  messages.h
kernel/include/kernel/DT/: dt.h  int.h  keyboard.h  syscall.h
kernel/include/kernel/dev/: dev.h  driver_base._h  kb_driver.h  pci.h  tty.h
kernel/include/kernel/dev/pci/: helloworld_device.h
kernel/include/kernel/kthread/: dq.h  ktasks.h
kernel/include/kernel/memory/: heap.h  mmu.h
kernel/include/kernel/scheduler/: task.h
kernel/include/kernel/serial/: serial.h
kernel/include/kernel/tests/: tests.h
kernel/include/kernel/utils/: dt.h  int.h  memory.h  utils.h
kernel/include/kernel/utils/DT/: dt.h  int.h
kernel/include/kernel/vfs/: elf.h  file.h  node.h
kernel/include/kernel/vfs/fs/: devfs.h  drv_base._h  initrd.h
kernel/include/kernel/vga/: vga.h
kernel/include/lib/: asm_lib.h  clist.h  queue.h  slist.h  stdio.h  string.h  syscall.h
kernel/src/: kernel.c
kernel/src/kernel/: asm_lib.asm  kernel.c
kernel/src/kernel/DT/: dt.c  int.c  int_handle.asm  keyboard.c  syscall.c
kernel/src/kernel/dev/: dev.c  driver_base._c  kb_driver.c  pci.c  tty.c
kernel/src/kernel/dev/pci/: helloworld_device.c
kernel/src/kernel/kthread/: dq.c  ktasks.c
kernel/src/kernel/memory/: heap.c  mmu.c
kernel/src/kernel/scheduler/: schedule.c  task.c
kernel/src/kernel/serial/: serial.c
kernel/src/kernel/stdlib/: clist.c  queue.c  stdio.c  utils.c
kernel/src/kernel/tests/: tests.c
kernel/src/kernel/utils/: clist.c  dt.c  int.c  memory.c  stdio.c
kernel/src/kernel/utils/DT/: dt.c  int.c  int_handle.asm  syscall.c
kernel/src/kernel/vfs/: elf.c  file.c  node.c
kernel/src/kernel/vfs/fs/: devfs.c  drv_base._c  initrd.c
kernel/src/kernel/vga/: vga.c
kernel/src/lib/: asm_lib.asm  clist.c  queue.c  slist.c  stdio.c  string.c
kernel/src/utils/: dt.c  int.c  memory.c  utils.c
kernel/src/vga/: vga.c
libr/: CMakeLists.txt
libr/include/: types.h
libr/include/lib/: string.h  syscall.h
libr/src/: asm_lib.asm  clist.c  queue.c  stdio.c  string.c
libs/libd/: CMakeLists.txt
libs/libd/libd/: package.d
libs/libr/: CMakeLists.txt
libs/libr/include/lib/: slist.h  syscall.h
libs/libr/src/: crt0.asm  slist.c
loader/: ideal_fail.asm  linker.ld  start.asm  start.s
prog/: CMakeLists.txt  linker.ld
prog/lib/: CMakeLists.txt
prog/lib/lib/src/: main.c
prog/rlibc/: CMakeLists.txt
prog/rlibc/lib/include/: main.h  tests_lib.h
prog/rlibc/lib/src/: main.c  tests_lib.c
prog/shell/: CMakeLists.txt
prog/shell.d/: CMakeLists.txt
prog/shell.d/shell.d/src/: main.d
prog/shell/shell/include/: main.h
prog/shell/shell/src/: main.c
prog/shell_d/: CMakeLists.txt
prog/shell_d/shell_d/: arg.d  libr.d  main.d  utils.d  vars.d
tools/: initrd_builder.py  lists_generator.py
utils/dlang/: CMakeDCompilerABI.d  CMakeDInformation.cmake  CMakeTestDCompiler.cmake
utils/grub/: grub.cfg
utils/patches/: binutils-2.38.patch  gcc-9.5.0-1.patch  gcc-9.5.0-2.patch  gcc-9.5.0.macos.patch  gcc-9.5.0.patch
utils/toolchains/: gcc.toolchain.cmake  llvm.toolchain.cmake  llvm_complex.toolchain.cmake
utils/tools/: initrd_builder.py  lists_generator.py  pci.txt
